@@ -99,6 +99,7 @@ struct _S3Device {
     char *storage_class;
     char *host;
     char *service_path;
+    char *server_side_encryption;
 
     char *ca_info;
 
@@ -194,6 +195,10 @@ static DevicePropertyBase device_property_s3_bucket_location;
 /* Storage class */
 static DevicePropertyBase device_property_s3_storage_class;
 #define PROPERTY_S3_STORAGE_CLASS (device_property_s3_storage_class.ID)
+
+/* Storage class */
+static DevicePropertyBase device_property_s3_server_side_encryption;
+#define PROPERTY_S3_SERVER_SIDE_ENCRYPTION (device_property_s3_server_side_encryption.ID)
 
 /* Path to certificate authority certificate */
 static DevicePropertyBase device_property_ssl_ca_info;
@@ -341,6 +346,10 @@ static gboolean s3_device_set_bucket_location_fn(Device *self,
     PropertySurety surety, PropertySource source);
 
 static gboolean s3_device_set_storage_class_fn(Device *self,
+    DevicePropertyBase *base, GValue *val,
+    PropertySurety surety, PropertySource source);
+
+static gboolean s3_device_set_server_side_encryption_fn(Device *self,
     DevicePropertyBase *base, GValue *val,
     PropertySurety surety, PropertySource source);
 
@@ -787,6 +796,9 @@ s3_device_register(void)
     device_property_fill_and_register(&device_property_s3_storage_class,
                                       G_TYPE_STRING, "s3_storage_class",
        "Storage class as specified by Amazon (STANDARD or REDUCED_REDUNDANCY)");
+    device_property_fill_and_register(&device_property_s3_server_side_encryption,
+                                      G_TYPE_STRING, "s3_server_side_encryption",
+       "Serve side encryption as specified by Amazon (AES256)");
     device_property_fill_and_register(&device_property_ssl_ca_info,
                                       G_TYPE_STRING, "ssl_ca_info",
        "Path to certificate authority certificate");
@@ -986,6 +998,11 @@ s3_device_class_init(S3DeviceClass * c G_GNUC_UNUSED)
 	    device_simple_property_get_fn,
 	    s3_device_set_storage_class_fn);
 
+    device_class_register_property(device_class, PROPERTY_S3_SERVER_SIDE_ENCRYPTION,
+	    PROPERTY_ACCESS_GET_MASK | PROPERTY_ACCESS_SET_BEFORE_START,
+	    device_simple_property_get_fn,
+	    s3_device_set_server_side_encryption_fn);
+
     device_class_register_property(device_class, PROPERTY_SSL_CA_INFO,
 	    PROPERTY_ACCESS_GET_MASK | PROPERTY_ACCESS_SET_BEFORE_START,
 	    device_simple_property_get_fn,
@@ -1160,6 +1177,20 @@ s3_device_set_storage_class_fn(Device *p_self, DevicePropertyBase *base,
 
     amfree(self->storage_class);
     self->storage_class = str_val;
+    device_clear_volume_details(p_self);
+
+    return device_simple_property_set_fn(p_self, base, val, surety, source);
+}
+
+static gboolean
+s3_device_set_server_side_encryption_fn(Device *p_self, DevicePropertyBase *base,
+    GValue *val, PropertySurety surety, PropertySource source)
+{
+    S3Device *self = S3_DEVICE(p_self);
+    char *str_val = g_value_dup_string(val);
+
+    amfree(self->server_side_encryption);
+    self->server_side_encryption = str_val;
     device_clear_volume_details(p_self);
 
     return device_simple_property_set_fn(p_self, base, val, surety, source);
@@ -1462,6 +1493,7 @@ static void s3_device_finalize(GObject * obj_self) {
     if(self->user_token) g_free(self->user_token);
     if(self->bucket_location) g_free(self->bucket_location);
     if(self->storage_class) g_free(self->storage_class);
+    if(self->server_side_encryption) g_free(self->server_side_encryption);
     if(self->ca_info) g_free(self->ca_info);
 }
 
@@ -1508,7 +1540,8 @@ static gboolean setup_handle(S3Device * self) {
 					   self->host, self->service_path,
 					   self->use_subdomain,
 					   self->user_token, self->bucket_location,
-					   self->storage_class, self->ca_info);
+					   self->storage_class, self->ca_info,
+					   self->server_side_encryption);
             if (self->s3t[thread].s3 == NULL) {
 	        device_set_error(d_self,
 		    g_strdup(_("Internal error creating S3 handle")),
